test/error/nilindex.luau
local i = nil
local t = { 1, 2, 3 }
t[i] = 4
